--- a/package.json
+++ b/package.json
@@ -6,18 +6,10 @@
     "scripts": {
         "cp-non-ts": "rm -rf ./dist & copyfiles \"metadata/**/*\" -e \"metadata/**/*.ts\" dist/",
         "build": "npm run cp-non-ts & tsc",
-        "deploy": "sfdx force:mdapi:deploy -d ./dist/metadata/beer-explorer -u charlie@callawaycloudconsulting.com -w 3000"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/ccoenraets/belgian-beer-explorer-lightning.git"
+        "deploy": "sfdx force:mdapi:deploy -d ./dist/metadata/beer-explorer -u charlie@callawaycloudconsulting.com.sandbox -w 3000"
     },
     "author": "",
     "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/ccoenraets/belgian-beer-explorer-lightning/issues"
-    },
-    "homepage": "https://github.com/ccoenraets/belgian-beer-explorer-lightning#readme",
     "devDependencies": {
         "copyfiles": "^2.0.0"
     }
