--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
     "compilerOptions": {
         "module": "es6",
+        "target": "es5",
         "noImplicitAny": false,
-        "removeComments": true,
+        "removeComments": false,
         "preserveConstEnums": true,
-        "outDir": "dist/metadata/beer-explorer/aura"
+        "outDir": "dist/metadata/beer-explorer/aura",
+        "inlineSources": true,
+        "inlineSourceMap": true
     },
     "include": [
       "metadata/**/*"
